<resources>
    <string name="app_name">EasyBiz</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="toys">Toys</string>
    <string name="gifts">Gifts</string>
    <string name="at_our_store">At Our Store</string>
    <string name="contact_us">About Developer</string>
    <string name="data_policy">Data Policy</string>
    <string name="data_privacy">Data Privacy</string>
    <string name="luxury">Luxury</string>
    <string name="account">Account</string>
    <string name="accepted_bottom_nav">Accepted</string>
    <string name="pending_bottom_nav">Pending</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="business">Store Management</string>
    <string name="employees_desk">Employee\'s Desk</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="not_registered_yet_register_here">Not registered yet ? Register here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_shopName">Shop Name</string>
    <string name="hint_shop_name">Shop Name</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="mode_of_transaction">\"Mode of Transaction: \"</string>
    <string name="paid_amount">\"Amount Paid: \"</string>
    <string name="date_delivered">\"Date Delivered: \"</string>
</resources>